# resume-feedback-engine

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  Caddyfile  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  rfe.db-shm  rfe.db-wal  run.ps1  run.sh
.github/workflows/: ci.yml
src/rfe/: main.py
src/rfe/adapters/delivery/: console.py  smtp.py  webhook.py
src/rfe/adapters/llm/: mock.py  openai_compat.py
src/rfe/adapters/persistence/: encrypted_repo.py  memory.py  sqlite_repo.py
src/rfe/api/: app.py  auth.py  feedback_page.py  rate_limit.py  rbac.py  ui.py
src/rfe/domain/: entities.py  errors.py  selection.py
src/rfe/ports/: deliverer.py  model_provider.py  repositories.py
src/rfe/security/: audit.py  clock.py  crypto.py  tokens.py
src/rfe/usecases/: compose_feedback.py  compute_stats.py  deliver_feedback.py  draft_rubric.py  erase_candidate.py  evaluate_candidate.py  purge_candidates.py
tests/api/: test_auth.py  test_feedback_page.py  test_flow.py  test_purge_endpoint.py  test_rate_limit.py  test_rbac.py  test_resume_extract.py  test_stats.py  test_ui.py  test_wiring.py
tests/unit/: test_advisories.py  test_audit.py  test_compose_feedback.py  test_crypto.py  test_deliver_feedback.py  test_draft_rubric.py  test_encrypted_repo.py  test_erase_candidate.py  test_evaluate_candidate.py  test_feedback_state.py  test_memory_repo.py  test_mock_provider.py  test_openai_compat.py  test_purge_candidates.py  test_rubric.py  test_selection.py  test_smtp_deliverer.py  test_sqlite_repo.py  test_tokens.py  test_webhook_deliverer.py
(+3 files in other folders)
